--- a/grades_manager/views/res_partner_views.xml
+++ b/grades_manager/views/res_partner_views.xml
@@ -1,4 +1,6 @@
 <odoo>
+
+    <!-- Aumentar campos en el modulo de contactos -->
     <record id="view_partner_form" model="ir.ui.view">
         <field name="name">res.partner.form.ext</field>
         <field name="model">res.partner</field>
@@ -6,6 +8,7 @@
         <field name="arch" type="xml">
             <field name="category_id" position="after">
                 <field name="is_teacher"/>
+                <field name="is_student"/>
             </field>
             <xpath expr="//field[@name='vat']/.." position="inside">
                 <field name="is_freelance"/>
@@ -13,6 +16,7 @@
         </field>
     </record>
 
+    <!-- Vistas de profesores -->
     <record id="teacher_list_view" model="ir.ui.view">
         <field name="name">teacher.list</field>
         <field name="model">res.partner</field>
@@ -49,6 +53,47 @@
         <field name="view_ids" eval="[(5,0,0),
             (0, 0, {'view_mode': 'list', 'view_id': ref('teacher_list_view')}),
             (0, 0, {'view_mode': 'form', 'view_id': ref('teacher_form_view')})
+        ]"/>
+    </record>
+
+    <!-- Vistas de estudiantes -->
+    <record id="student_list_view" model="ir.ui.view">
+        <field name="name">student.list</field>
+        <field name="model">res.partner</field>
+        <field name="arch" type="xml">
+            <list string="Students">
+                <field name="display_name"/>
+                <field name="phone"/>
+                <field name="email"/>
+                <field name="is_student"/>
+            </list>
+        </field>
+    </record>
+
+    <record id="student_form_view" model="ir.ui.view">
+        <field name="name">student.form</field>
+        <field name="model">res.partner</field>
+        <field name="arch" type="xml">
+            <form string="Student">
+                <sheet>
+                    <group>
+                        <field name="display_name"/>
+                        <field name="phone"/>
+                        <field name="email"/>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <record id="students_action" model="ir.actions.act_window">
+        <field name="name">Students</field>
+        <field name="res_model">res.partner</field>
+        <field name="view_mode">list,form</field>
+        <field name="domain">[("is_student", "=", True)]</field>
+        <field name="view_ids" eval="[(5,0,0),
+            (0, 0, {'view_mode': 'list', 'view_id': ref('student_list_view')}),
+            (0, 0, {'view_mode': 'form', 'view_id': ref('student_form_view')})
         ]"/>
     </record>
 </odoo>
