--- a/grades_manager/views/res_partner_views.xml
+++ b/grades_manager/views/res_partner_views.xml
@@ -39,6 +39,7 @@
                         <field name="display_name"/>
                         <field name="phone"/>
                         <field name="email"/>
+                        <field name="is_teacher"/>
                     </group>
                 </sheet>
             </form>
@@ -50,6 +51,7 @@
         <field name="res_model">res.partner</field>
         <field name="view_mode">list,form</field>
         <field name="domain">[('is_teacher', '=', True)]</field>
+        <field name="context">{'default_is_teacher': True}</field>
         <field name="view_ids" eval="[(5,0,0),
             (0, 0, {'view_mode': 'list', 'view_id': ref('teacher_list_view')}),
             (0, 0, {'view_mode': 'form', 'view_id': ref('teacher_form_view')})
@@ -62,7 +64,7 @@
         <field name="model">res.partner</field>
         <field name="arch" type="xml">
             <list string="Students">
-                <field name="display_name"/>
+                <field name="name"/>
                 <field name="phone"/>
                 <field name="email"/>
                 <field name="is_student"/>
@@ -77,7 +79,7 @@
             <form string="Student">
                 <sheet>
                     <group>
-                        <field name="display_name"/>
+                        <field name="name"/>
                         <field name="phone"/>
                         <field name="email"/>
                     </group>
